<resources>
    <string name="app_name">StoreApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introductionText">"The Right Address\nFor Shopping\nAnyday "</string>
    <string name="tvQuality">it is now easy to reach the \nbest quality among the\nproducts on the internet</string>
    <string name="startButton">Start</string>
    <string name="kleine">Kleine</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_register">Don\'t have an account?Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="do_you_have_an_account_login">Do you have an account?Login</string>
    <string name="see_product">See product</string>
</resources>