<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountOptionsFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blury_background"
            android:scaleType="centerCrop"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAppName"
                android:text="@string/kleine"
                android:textStyle="bold"
                style="@style/h3"
                android:drawablePadding="6dp"
                app:drawableStartCompat="@drawable/ic_kleine_shape"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="120dp"

                />
            <TextView
                android:id="@+id/rightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introductionText"
                style="@style/h4"
                android:textSize="30sp"
                android:layout_marginTop="92dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tvAppName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h2"
                app:layout_constraintTop_toBottomOf="@id/rightText"
                app:layout_constraintStart_toStartOf="@id/rightText"
                app:layout_constraintEnd_toEndOf="@id/rightText"
                android:text="@string/tvQuality"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegisterAccountOptions"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/mediumButtonHeight"
                style="@style/blueButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/tvQuality"
                app:layout_constraintStart_toStartOf="@id/tvQuality"
                app:layout_constraintEnd_toEndOf="@id/tvQuality"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/register"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLoginAccountOptions"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/mediumButtonHeight"
                style="@style/whiteButtonStyle"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
                app:layout_constraintStart_toStartOf="@id/tvQuality"
                app:layout_constraintEnd_toEndOf="@id/tvQuality"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/login"
                android:textSize="20sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>