<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.IntroductionFragment">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/texture_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:3"/>

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellips"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guidelineLeftEclipse"
        app:layout_constraintEnd_toEndOf="@id/guidelineRightEclipse"
        app:layout_constraintTop_toTopOf="@id/guidelineTopEclipse"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomEclipse"
         />
    <TextView
        android:id="@+id/rightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introductionText"
        style="@style/h4"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"/>

    <TextView
        android:id="@+id/tvQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        app:layout_constraintTop_toBottomOf="@id/rightText"
        app:layout_constraintStart_toStartOf="@id/guidelineLeftEclipse"
        app:layout_constraintEnd_toEndOf="@id/guidelineRightEclipse"
        android:text="@string/tvQuality"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineRightEclipse"
        android:padding="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButtonIntroductionFragment"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/startButton"
        android:textSize="20sp"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopEclipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

   <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineBottomEclipse"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineRightEclipse"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineLeftEclipse"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>